--- a/less/style.less
+++ b/less/style.less
@@ -1,314 +1,334 @@
 p {
 	margin: 0;
 	padding: 0;
-}
-
-body {
+  }
+  body {
 	background-color: #f5f5f5;
-}
-
-.smart-logo {
+  }
+  .smart-logo {
 	padding: -10px -10px;
 	border-radius: 2px;
 	border: 4px solid rgba(23, 15, 28, 0.6);
 	text-align: center;
-	& p {
-		opacity: 0.9;
-		font-size: 50px;
-		line-height: 35px;
-		padding: 9px 0;
-		&::first-letter {
-			color: #fc6744;
-		}
-	}
-}
-.first-section {
-	margin-top: 40px;
-	&-text {
-		margin-top: 100px;
-		text-align: center;
-		opacity: 0.94;
-		& h1 {
-			font-size: 50px;
-			line-height: 45px;
-			color: #626262;
-		}
-		& p {
-			margin-top: 30px;
-			opacity: 0.65;
-			font-size: 17.3px;
-			color: #000000;
-		}
-	}
-}
-.make-special {
+	font-family: "Open Sans";
+	font-weight: 600;
+  }
+  .smart-logo p {
+	opacity: 0.9;
+	font-size: 50px;
+	line-height: 35px;
+	padding: 9px 0;
+	font-family: "Open Sans";
+  }
+  .smart-logo p::first-letter {
 	color: #fc6744;
-}
-.send-message {
+  }
+  .first-section {
+	margin-top: 40px;
+  }
+  .first-section-text {
+	margin-top: 100px;
+	text-align: center;
+	opacity: 0.94;
+  }
+  .first-section-text h1 {
+	font-size: 50px;
+	line-height: 45px;
+	color: #626262;
+	font-family: "Open Sans";
+	font-weight: 600;
+  }
+  .first-section-text p {
+	margin-top: 30px;
+	opacity: 0.65;
+	font-size: 17.3px;
+	color: #000000;
+	font-family: "Open Sans";
+  }
+  .make-special {
+	color: #fc6744;
+  }
+  .send-message {
 	margin-top: 100px;
 	text-align: center;
 	background-color: white;
 	box-shadow: 0 0 57px rgba(20, 20, 21, 0.2);
 	border-radius: 2px;
-	&-top {
-		margin-bottom: 25px;
-		line-height: 25px;
-		padding-top: 20px;
-		font-size: 20px;
-		opacity: 0.9;
-	}
-	& input {
-		opacity: 0.6;
-		outline: none;
-		border: none;
-		border-bottom: 1px solid rgba(0, 0, 0, 0.22);
-		margin-top: 20px;
-		width: 75%;
-	}
-	& button {
-		display: block;
-		margin-top: 15px;
-		margin: 0 15%;
-		margin-top: 20px;
-		background-color: #ff5c36;
-		color: white;
-		box-shadow: 2px 11px 20px rgba(20, 20, 21, 0.08);
-		border-radius: 27px;
-		border: 1px solid rgba(1, 2, 2, 0.07);
-		height: 50px;
-		width: 70%;
-		font-size: 17px;
-		line-height: 5%;
-	}
-	&-message {
-		margin-top: 20px;
-		opacity: 0.6;
-		margin-right: 47%;
-	}
-}
-.rofl {
+	font-family: "Open Sans";
+  }
+  .send-message-top {
+	margin-bottom: 25px;
+	line-height: 25px;
+	padding-top: 20px;
+	font-size: 20px;
+	opacity: 0.9;
+  }
+  .send-message input {
+	opacity: 0.6;
+	outline: none;
+	border: none;
+	border-bottom: 1px solid rgba(0, 0, 0, 0.22);
+	margin-top: 20px;
+	width: 75%;
+  }
+  .send-message button {
+	display: block;
+	margin-top: 15px;
+	margin: 0 15%;
+	margin-top: 20px;
+	background-color: #ff5c36;
+	color: white;
+	box-shadow: 2px 11px 20px rgba(20, 20, 21, 0.08);
+	border-radius: 27px;
+	border: 1px solid rgba(1, 2, 2, 0.07);
+	height: 50px;
+	width: 70%;
+	font-size: 17px;
+	line-height: 5%;
+  }
+  .send-message-message {
+	margin-top: 20px;
+	opacity: 0.6;
+	margin-right: 47%;
+  }
+  .rofl {
 	opacity: 0;
-}
-.section-second {
+  }
+  .section-second {
 	background-color: white;
 	padding-bottom: 200px;
 	text-align: center;
-	&-text {
-		h2 {
-			margin-top: 155px;
-			line-height: 45px;
-			font-size: 50px;
-		}
-		p {
-			margin-top: 30px;
-			opacity: 0.7;
-			font-size: 17.3px;
-			color: #414141;
-			margin-bottom: 100px;
-		}
-	}
-}
-.advance {
+  }
+  .section-second-text h2 {
+	margin-top: 155px;
+	line-height: 45px;
+	font-size: 50px;
+	font-family: "Open Sans";
+	font-weight: 600;
+  }
+  .section-second-text p {
+	margin-top: 30px;
+	opacity: 0.7;
+	font-size: 17.3px;
+	color: #414141;
+	margin-bottom: 100px;
+	font-family: "Open Sans";
+  }
+  .advance {
 	padding-top: 60px;
-	&:hover {
-		box-shadow: 0 0 35px rgba(20, 20, 21, 0.21);
-	}
-	& h3 {
-		margin-top: 15px;
-		letter-spacing: 0.2px;
-		opacity: 0.9;
-		font-size: 25px;
-		color: #ffffff;
-	}
-	& p {
-		margin-top: 15px;
-		padding-bottom: 50px;
-		line-height: 22px;
-		font-size: 17px;
-		color: #ffffff;
-		letter-spacing: 0.15px;
-		opacity: 0.75;
-	}
-	& img {
-		height: 50px;
-		width: 50px;
-	}
-	& button {
-		border: none;
-		width: 85%;
-		height: 55px;
-		font-size: 16px;
-		font-size: 18px;
-		border-radius: 27px;
-		background-color: #ffffff;
-		box-shadow: 0 0 14px rgba(20, 20, 21, 0.05);
-		position: absolute;
-		left:50%;
-		margin-left: -42.5%;
-		top: 90%;
-		}
-	&1 {
-		background-color: #4eb2f7;
-	}
-	&2 {
-		background-color: #c049f8;
-	}
-	&3 {
-		background-color: #817eff;
-	}
-	&4 {
-		background-color: #f74770;
-	}
-}
-.section-third {
+	font-family: "Open Sans";
+  }
+  .advance:hover {
+	box-shadow: 0 0 35px rgba(20, 20, 21, 0.21);
+  }
+  .advance h3 {
+	margin-top: 15px;
+	letter-spacing: 0.2px;
+	opacity: 0.9;
+	font-size: 25px;
+	color: #ffffff;
+	font-family: "Open Sans";
+	font-weight: 600;
+  }
+  .advance p {
+	margin-top: 15px;
+	padding-bottom: 50px;
+	line-height: 22px;
+	font-size: 17px;
+	color: #ffffff;
+	letter-spacing: 0.15px;
+	opacity: 0.75;
+  }
+  .advance img {
+	height: 50px;
+	width: 50px;
+  }
+  .advance button {
+	border: none;
+	width: 85%;
+	height: 55px;
+	font-size: 16px;
+	font-size: 18px;
+	border-radius: 27px;
+	background-color: #ffffff;
+	box-shadow: 0 0 14px rgba(20, 20, 21, 0.05);
+	position: absolute;
+	left: 50%;
+	margin-left: -42.5%;
+	top: 90%;
+  }
+  .advance1 {
+	background-color: #4eb2f7;
+  }
+  .advance2 {
+	background-color: #c049f8;
+  }
+  .advance3 {
+	background-color: #817eff;
+  }
+  .advance4 {
+	background-color: #f74770;
+  }
+  .section-third {
+	font-family: "Open Sans";
 	background-color: #fbfbfb;
 	text-align: center;
 	padding-bottom: 200px;
-	& h2 {
-		margin-top: 155px;
-		line-height: 45px;
-		font-size: 50px;
-	}
-	p {
-		margin-top: 15px;
-		opacity: 0.5;
-		font-size: 17.3px;
-		color: #000000;
-		margin-bottom: 70px;
-	}
-}
-.work-box {
+  }
+  .section-third h2 {
+	margin-top: 155px;
+	line-height: 45px;
+	font-size: 50px;
+	font-family: "Open Sans";
+	font-weight: 600;
+  }
+  .section-third p {
+	margin-top: 15px;
+	opacity: 0.5;
+	font-size: 17.3px;
+	color: #000000;
+	margin-bottom: 70px;
+  }
+  .work-box {
 	width: 350px;
 	height: 350px;
 	margin-top: 30px;
-}
-
-.work-box img {
+  }
+  .work-box img {
 	width: 100%;
 	height: 100%;
-}
-.section-fourth {
+  }
+  .section-fourth {
+	font-family: "Open Sans";
 	padding-bottom: 500px;
 	background-color: white;
 	text-align: center;
-	&-header {
-		& h2 {
-		margin-top: 155px;
-		line-height: 45px;
-		font-size: 50px;
-		}
-		p {
-			margin-top: 15px;
-			opacity: 0.5;
-			font-size: 17.3px;
-			color: #000000;
-			margin-bottom: 70px;
-		}
-	}
-}
-.feature-box {
+  }
+  .section-fourth-header h2 {
+	margin-top: 155px;
+	line-height: 45px;
+	font-size: 50px;
+	font-family: "Open Sans";
+	font-weight: 600;
+  }
+  .section-fourth-header p {
+	margin-top: 15px;
+	opacity: 0.5;
+	font-size: 17.3px;
+	color: #000000;
+	margin-bottom: 70px;
+  }
+  .feature-box {
+	font-family: "Open Sans";
 	background-color: black;
-	display:flex;
-	justify-content:center;
-	align-items:center;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 	margin-top: 20px;
 	box-shadow: 0 0 0 rgba(20, 20, 21, 0.07);
 	border-radius: 2px;
 	background-color: #fbfbfb;
-	&:hover {
-		cursor: pointer;
-	}
-	&1 {
-		margin-top: 90px;
-	}
-	& img {
-		display: block;
-		margin-left: 50%;
-		margin-top: 15px;
-		margin-right: 25%;
-		width: 50px;
-		height: 50px;
-	}
-}
-.active {
+  }
+  .feature-box:hover {
+	cursor: pointer;
+  }
+  .feature-box1 {
+	margin-top: 90px;
+  }
+  .feature-box img {
+	display: block;
+	margin-left: 50%;
+	margin-top: 15px;
+	margin-right: 25%;
+	width: 50px;
+	height: 50px;
+  }
+  .active {
+	font-family: "Open Sans";
 	box-shadow: 0 0 36px rgba(20, 20, 21, 0.2);
 	border-radius: 2px;
 	background-color: #ffffff;
-}
-.feature-box-text {
+  }
+  .feature-box-text {
+	font-family: "Open Sans";
 	text-align: left;
-	& h2 {
-		margin-top: 90px;
-		font-size: 30px;
-		opacity: 0.75;
-		color: #000;
-		line-height: 45.74px;
-	}
-	& p {
-		opacity: 0.7;
-		font-size: 16px;
-	}
-	& button {
-		margin-top: 20px;
-		width: 42%;
-		height: 55px;
-		box-shadow: 2px 11px 20px rgba(20, 20, 21, 0.07);
-		border-radius: 27px;
-		border: 1px solid rgba(1, 2, 2, 0.07);
-		background-color: #ffffff;
-	}
-	&2 {
-		margin-top: 15px;
-	}
-}
-.fbh {
+  }
+  .feature-box-text h2 {
+	margin-top: 90px;
+	font-size: 30px;
+	opacity: 0.75;
+	color: #000;
+	line-height: 45.74px;
+	font-family: "Open Sans";
+	font-weight: 600;
+  }
+  .feature-box-text p {
+	opacity: 0.7;
+	font-size: 16px;
+  }
+  .feature-box-text button {
+	margin-top: 20px;
+	width: 42%;
+	height: 55px;
+	box-shadow: 2px 11px 20px rgba(20, 20, 21, 0.07);
+	border-radius: 27px;
+	border: 1px solid rgba(1, 2, 2, 0.07);
+	background-color: #ffffff;
+  }
+  .feature-box-text2 {
+	margin-top: 15px;
+  }
+  .fbh {
+	font-family: "Open Sans";
 	background-color: #ff5c36;
 	border: none;
 	height: 3px;
 	width: 60px;
 	margin-left: 0px;
-}
-.apple-watch {
+  }
+  .apple-watch {
 	margin-top: 90px;
-}
-.section-fifth {
+  }
+  .section-fifth {
+	font-family: "Open Sans";
 	text-align: center;
 	padding-bottom: 200px;
 	background-color: #fbfbfb;
-	&-header {
-		& h2 {
-		margin-top: 155px;
-		line-height: 45px;
-		font-size: 50px;
-		opacity: 0.95;
-		}
-		p {
-			margin-top: 15px;
-			opacity: 0.5;
-			font-size: 17.3px;
-			color: #000000;
-			margin-bottom: 70px;
-		}
-	}
-}
-.team-photo-box {
+  }
+  .section-fifth-header h2 {
+	margin-top: 155px;
+	line-height: 45px;
+	font-size: 50px;
+	opacity: 0.95;
+	font-family: "Open Sans";
+	font-weight: 600;
+  }
+  .section-fifth-header p {
+	margin-top: 15px;
+	opacity: 0.5;
+	font-size: 17.3px;
+	color: #000000;
+	margin-bottom: 70px;
+  }
+  .team-photo-box {
+	font-family: "Open Sans";
 	margin-top: 100px;
 	height: 450px;
 	background-color: #ff5c36;
 	z-index: 98;
 	width: 100%;
-	&-name {
-		margin: 0 auto;
-		margin-top: -80px;
-		width: 80%;
-		height: 95px;
-		box-shadow: 1px 6px 16px rgba(20, 20, 21, 0.08);
-		border-radius: 2px;
-		background-color: #ffffff;
-
-	}
-}
-.hover-box {
+  }
+  .team-photo-box-name {
+	margin: 0 auto;
+	margin-top: -80px;
+	width: 80%;
+	height: 95px;
+	box-shadow: 1px 6px 16px rgba(20, 20, 21, 0.08);
+	border-radius: 2px;
+	background-color: #ffffff;
+  }
+  .hover-box {
+	font-family: "Open Sans";
 	opacity: 0;
 	transition: opacity 0.3s;
 	background-color: #fff3f0;
@@ -316,81 +336,88 @@ body {
 	height: 450px;
 	z-index: 99;
 	width: 100%;
-	& p {
-		margin-top: 10px;
-	}
-	&-first {
-		padding-top: 150px;
-	}
-	&:hover {
-		opacity: 1;
-	}
-	h3 {
-		margin-top: 90px;
-		color: #202020;
-		font-size: 30px;
-		opacity: 0.95;
-	}
-}
-.progress-bar {
+  }
+  .hover-box p {
+	margin-top: 10px;
+  }
+  .hover-box-first {
+	padding-top: 150px;
+  }
+  .hover-box:hover {
+	opacity: 1;
+  }
+  .hover-box h3 {
+	margin-top: 90px;
+	color: #202020;
+	font-size: 30px;
+	opacity: 0.95;
+	font-family: "Open Sans";
+	font-weight: 600;
+  }
+  .progress-bar {
 	width: 45%;
 	height: 4px;
 	background-color: #817f7e;
 	margin: 0 auto;
 	z-index: 100;
 	border-radius: 2px;
-	&2 {
-		width: 35%;
-		height: 4px;
-		background-color: #ff6e47;
-		margin: 0 auto;
-		margin-right: 37.5%;
-		margin-top: -4px;
-		z-index: 101;
-		border-radius: 2px;
-	}
-}
-.team-photo-box-name {
-	p {
-		opacity: 0.6;
-	}
-	h3 {
-		margin-top: 10px;
-		opacity: 0.9;
-		font-size: 30px;
-	}
-}
-.paint {
+  }
+  .progress-bar2 {
+	width: 35%;
+	height: 4px;
+	background-color: #ff6e47;
+	margin: 0 auto;
+	margin-right: 37.5%;
+	margin-top: -4px;
+	z-index: 101;
+	border-radius: 2px;
+  }
+  .team-photo-box-name {
+	font-family: "Open Sans";
+  }
+  .team-photo-box-name p {
+	opacity: 0.6;
+  }
+  .team-photo-box-name h3 {
+	margin-top: 10px;
+	opacity: 0.9;
+	font-size: 30px;
+	font-family: "Open Sans";
+	font-weight: 600;
+  }
+  .paint {
 	color: #ff724c;
 	opacity: 0.9;
 	font-size: 17px;
-}
-.section-sixth {
+  }
+  .section-sixth {
+	font-family: "Open Sans";
 	text-align: center;
 	padding-bottom: 200px;
 	background-color: white;
-	&-header {
-		& h2 {
-		margin-top: 155px;
-		line-height: 45px;
-		font-size: 50px;
-		opacity: 0.95;
-		}
-		p {
-			margin-top: 15px;
-			opacity: 0.5;
-			font-size: 17.3px;
-			color: #000000;
-			margin-bottom: 70px;
-		}
-	}
-}
-.words-box {
+  }
+  .section-sixth-header h2 {
+	margin-top: 155px;
+	line-height: 45px;
+	font-size: 50px;
+	opacity: 0.95;
+	font-family: "Open Sans";
+	font-weight: 600;
+  }
+  .section-sixth-header p {
+	margin-top: 15px;
+	opacity: 0.5;
+	font-size: 17.3px;
+	color: #000000;
+	margin-bottom: 70px;
+  }
+  .words-box {
 	box-shadow: 0 0 27px rgba(20, 20, 21, 0.09);
 	border-radius: 1px;
 	background-color: #fff;
-}
-.quotes {
+  }
+  .quotes {
+	font-family: "Source Sans Pro";
 	margin: 0 auto;
 	width: 90%;
 	padding-top: 40px;
@@ -399,42 +426,47 @@ body {
 	font-size: 17px;
 	font-weight: 400;
 	line-height: 27px;
-}
-.stars {
+  }
+  .stars {
 	display: inline-block;
 	padding-top: 7.5px;
 	padding-bottom: 7.5px;
 	color: #ffef3b;
 	font-size: 20px;
-}
-.defin {
+  }
+  .defin {
 	padding-bottom: 30px;
 	font-size: 17px;
-}
-.bold {
+	font-family: "Source Sans Pro";
+	font-style: italic;
+  }
+  .bold {
 	font-weight: 600;
 	font-size: 17px;
-}
-.div-handler {
+	font-family: "Source Sans Pro";
+	font-style: normal;
+  }
+  .div-handler {
 	margin: 0 auto;
 	margin-top: 35px;
 	height: 50px;
-}
-.btn-handler {
+  }
+  .btn-handler {
 	background-color: #e0e0e0;
 	width: 18px;
 	height: 6px;
 	border-radius: 3px;
 	display: inline-block;
 	margin: 10px auto;
-	&-active {
-		background-color: #ff6e47;
-	}
-	&:hover {
-		cursor: pointer;
-	}
-}
-.btn-slide-prev, .btn-slide-next {
+  }
+  .btn-handler-active {
+	background-color: #ff6e47;
+  }
+  .btn-handler:hover {
+	cursor: pointer;
+  }
+  .btn-slide-prev,
+  .btn-slide-next {
 	height: 50px;
 	width: 50px;
 	display: inline-block;
@@ -446,154 +478,149 @@ body {
 	box-shadow: 1px 3px 14px rgba(20, 20, 21, 0.08);
 	background-color: #ffffff;
 	border-radius: 50%;
-	& p {
-		opacity: 0.9;
-		margin: -1px auto;
-		font-size: 30px;
-		font-weight: 900;
-
-	}
-	&:hover {
-		cursor: pointer;
-	}
-}
-.btn-slide-prev {
+  }
+  .btn-slide-prev p,
+  .btn-slide-next p {
+	opacity: 0.9;
+	margin: -1px auto;
+	font-size: 30px;
+	font-weight: 900;
+  }
+  .btn-slide-prev:hover,
+  .btn-slide-next:hover {
+	cursor: pointer;
+  }
+  .btn-slide-prev {
 	left: 19%;
-}
-.btn-slide-next {
+  }
+  .btn-slide-next {
 	right: 19%;
-}
-.links {
+  }
+  .links {
 	padding: 100px 0;
 	background-color: #fbfbfb;
-}
-.footer {
+  }
+  .footer {
 	text-align: center;
 	background-color: #f7f7f7;
 	padding-bottom: 60px;
-	& p {
-		display: inline-block;
-		padding-bottom: -10px;
-	}
-	& button {
-		margin: 65px auto;
-		width: 238px;
-		height: 55px;
-		box-shadow: 2px 11px 20px rgba(20, 20, 21, 0.07);
-		border-radius: 27px;
-		border: 1px solid rgba(1, 2, 2, 0.07);
-		background-color: #fdfdfd;
-	}
-}
-.social-media-link {
+  }
+  .footer p {
+	display: inline-block;
+	padding-bottom: -10px;
+  }
+  .footer button {
+	margin: 65px auto;
+	width: 238px;
+	height: 55px;
+	box-shadow: 2px 11px 20px rgba(20, 20, 21, 0.07);
+	border-radius: 27px;
+	border: 1px solid rgba(1, 2, 2, 0.07);
+	background-color: #fdfdfd;
+  }
+  .social-media-link {
 	display: inline-block;
 	width: 53px;
 	height: 52px;
 	background-color: #d3d3d3;
 	border-radius: 50%;
-	&:hover {
-		background-color: #ff6e47;
-		box-shadow: 0 0 23px rgba(20, 20, 21, 0.29);
-	}
-	& img {
-		margin-top: 17px;
-	}
-}
-.burger-box {
+  }
+  .social-media-link:hover {
+	background-color: #ff6e47;
+	box-shadow: 0 0 23px rgba(20, 20, 21, 0.29);
+  }
+  .social-media-link img {
+	margin-top: 17px;
+  }
+  .burger-box {
 	width: 100%;
 	height: 100%;
 	background-color: red;
 	border-radius: 50%;
-}
-#menu {
+  }
+  #menu {
 	height: 50px;
 	width: 100%;
 	text-align: right;
-	& img {
-		width: 80%;
-		height: 80%;
-		opacity: 0.75;
-	}
-}
-
-
-.cmn-toggle-switch {
-  display: block;
-  position: relative;
-  overflow: hidden;
-  margin: 0;
-  padding: 0;
-  width: 100%;
-  height: 50px;
-  font-size: 0;
-  text-indent: -9999px;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-  box-shadow: none;
-  border-radius: none;
-  border: none;
-  cursor: pointer;
-  background-color: #f5f5f5;
-  -webkit-transition: background 0.3s;
-          transition: background 0.3s;
-}
- 
-.cmn-toggle-switch:focus {
-  outline: none;
-}
-
-.cmn-toggle-switch span {
-  display: block;
-  position: absolute;
-  width: 60px;
-  top: 15px;
-  left: 18px;
-  right: 18px;
-  height: 4px;
-  background-color: #170f1c;
-}
- 
-.cmn-toggle-switch span::before,
-.cmn-toggle-switch span::after {
-  position: absolute;
-  display: block;
-  left: 0;
-  width: 60px;
-  height: 4px;
-  background-color: #fff;
-  content: "";
-}
- 
-.cmn-toggle-switch span::before {
-  top: -13px;
-  background-color: #170f1c;
-}
- 
-.cmn-toggle-switch span::after {
-  bottom: -13px;
-  background-color: #170f1c;
-}
-.menu-main {
+  }
+  #menu img {
+	width: 80%;
+	height: 80%;
+	opacity: 0.75;
+  }
+  .cmn-toggle-switch {
+	display: block;
+	position: relative;
+	overflow: hidden;
+	margin: 0;
+	padding: 0;
+	width: 100%;
+	height: 50px;
+	font-size: 0;
+	text-indent: -9999px;
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	appearance: none;
+	box-shadow: none;
+	border-radius: none;
+	border: none;
+	cursor: pointer;
+	background-color: #f5f5f5;
+	-webkit-transition: background 0.3s;
+	transition: background 0.3s;
+  }
+  .cmn-toggle-switch:focus {
+	outline: none;
+  }
+  .cmn-toggle-switch span {
+	display: block;
+	position: absolute;
+	width: 60px;
+	top: 15px;
+	left: 18px;
+	right: 18px;
+	height: 4px;
+	background-color: #170f1c;
+  }
+  .cmn-toggle-switch span::before,
+  .cmn-toggle-switch span::after {
+	position: absolute;
+	display: block;
+	left: 0;
+	width: 60px;
+	height: 4px;
+	background-color: #fff;
+	content: "";
+  }
+  .cmn-toggle-switch span::before {
+	top: -13px;
+	background-color: #170f1c;
+  }
+  .cmn-toggle-switch span::after {
+	bottom: -13px;
+	background-color: #170f1c;
+  }
+  .menu-main {
 	height: 200px;
 	background-color: #fc704f;
 	text-align: center;
 	border-radius: 2px;
-	& a {
-		display: block;
-		padding-top: 10px;
-		color: #ffded7;
-		font-size: 18px;
-	}
-	& button {
-		position: absolute;
-		top: 0;
-		right: 15px;
-		width: 50px;
-	}
-}
-@media (max-width: 1200px) {
+  }
+  .menu-main a {
+	display: block;
+	padding-top: 10px;
+	color: #ffded7;
+	font-size: 18px;
+  }
+  .menu-main button {
+	position: absolute;
+	top: 0;
+	right: 15px;
+	width: 50px;
+  }
+  @media (max-width: 1200px) {
 	.advance-box {
-		margin-top: 100px;
+	  margin-top: 100px;
 	}
-}
+  }
+  
